--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,15 @@
 body {
   background-color: $negro;
 }
+h3 {
+  font-family: "Oswald", sans-serif;
+}
+h2 {
+  font-family: 'Oswald', sans-serif;
+  width: 100%;
+  background-image: linear-gradient(to right, $gris, $negro);
+}
+
 
 
 
